# TwitchChannnelManagementTool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/overlay/default/: index.html  script.js  style.css
doc/: basic_design.md  detailed_design.md  integration_test_specification.md  oauth_scopes.md  requirements.md  settings_list.md  system_test_specification.md  ui_design.md  unit_test_specification.md
pic/: tab_sample.pbx
plugins/: README.md
src/: main.cpp
src/core/: AppController.cpp  AppController.h  PluginLoader.cpp  PluginLoader.h  SignalDispatcher.cpp  SignalDispatcher.h
src/modules/logger/: Logger.cpp  Logger.h
src/modules/obs/: ObsHttpWebSocketServer.cpp  ObsHttpWebSocketServer.h
src/modules/tts/: BouyomiClient.cpp  BouyomiClient.h  ITtsClient.h  TtsManager.cpp  TtsManager.h  VoiceVoxClient.cpp  VoiceVoxClient.h
src/modules/twitch/: TwitchEventCollector.cpp  TwitchEventCollector.h
src/shared/: plugin_interface.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsTab.cpp  SettingsTab.h  SettingsTab.ui
test/: CMakeLists.txt  test_main.cpp
test/integration/: test_integration.cpp
test/unit/: test_logger.cpp  test_obs_server.cpp  test_plugin_loader.cpp  test_tts_clients.cpp
